@@ -21,11 +21,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
+	<string>GIT_ANNEX_VERSION</string>
 	<key>CFBundleSignature</key>
 	<string>git-annex</string>
 	<key>CFBundleVersion</key>
-	<string>0.0.1</string>
+	<string>GIT_ANNEX_VERSION</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.5</string>
 	<key>CFBundleDisplayName</key>
